Fixed css in about page when screen is too small

--- a/src/Pages/AboutPage/AboutPage.css
+++ b/src/Pages/AboutPage/AboutPage.css
@@ -1,3 +1,9 @@
+.profileWindow {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
 .profileTop {
   margin: 1rem;
   margin-left: 2.5%;
@@ -75,6 +81,10 @@
     align-items: center;
   }
 
+  .profileBox {
+    min-width: 200px;
+  }
+
   .profileBio {
     margin-left: 1.5rem;
     margin-right: 1.5rem;
@@ -100,9 +110,5 @@
     display: flex;
     flex-direction: row;
     padding-left: 0;
-  }
-
-  body {
-    overflow: auto;
   }
 }
